--- a/.github/workflows/mlops_ci_workflow.yaml
+++ b/.github/workflows/mlops_ci_workflow.yaml
@@ -24,3 +24,24 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+      - name: Run Data Processing Tests
+        run: |
+          python src/data/run_processing.py \
+            --input data/raw/house_data.csv \ 
+            --output data/processed/cleaned_house_data.csv
+
+      - name: Do Feature Engineering
+        run: |
+          python src/features/build_features.py \
+            --input data/processed/cleaned_house_data.csv \ 
+            --output data/features/feature_data.csv \
+            --preprocessor_path models/preprocessor.pkl
+
+      - name: Train Model
+        run: |
+          python src/models/train_model.py \
+            --config src/models/model_config.yaml \
+            --data data/processed/featured_house_data.csv \ 
+            --models-dir models \
+            --mlflow-tracking-uri http://localhost:5555
