--- a/.github/workflows/mlops_ci_workflow.yaml
+++ b/.github/workflows/mlops_ci_workflow.yaml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Do Feature Engineering
         run: |
-          python src/features/build_features.py \
+          python src/features/engineer.py \
             --input data/processed/cleaned_house_data.csv \
             --output data/features/feature_data.csv \
             --preprocessor_path models/preprocessor.pkl
